--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,95 @@
 /* место для вашего кода */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 92px 50px 96px;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+}
+
+/* .header__menu {
+
+} */
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+}
+
+.header__link {
+  list-style-type: none;
+}
+
+.header__link_active {
+  list-style: circle;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+}
+
+.header__address {
+  display: block;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 24.3px;
+}
+
+.cover {
+  color: #fff;
+  background: url("../images/cover.jpg") center/cover;
+}
+
+.overlay {
+  height: inherit;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-family: "Raleway", sans-serif;
+  font-size: 100px;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+
+.cover__title {
+
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  font-style: normal;
+  margin-top: 120px;
+}
+.cover__description-text {
+  word-spacing: 17px;
+  line-height: 28px; /* 127.273% */
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.bet-button {
+  
+}
