--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,10 @@
 /* место для вашего кода */
 
 .header {
+  margin: 100px 50px 92px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 92px 50px 96px;
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
 }
 
@@ -32,12 +31,11 @@
 
 .header__address {
   display: block;
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 24.3px;
 }
 
-/* Section cover */
+/* cover */
 
 .cover {
   color: #fff;
@@ -114,7 +112,6 @@
 
 .lots__heading {
   margin: 0 0 27px 90px;
-  color: #000;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -246,10 +243,10 @@
 /* footer */
 
 .footer {
-  margin: 0 50px  50px;
+  margin: 0 50px 50px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around; 
+  justify-content: space-around;
   gap: 356px;
 }
 
