--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,23 @@
   scroll-behavior: smooth;
 }
 
+body {
+  max-width: 1440px;
+  margin: auto;
+}
+
+.header__menu {
+  flex: 0 0 auto;
+  width: 44.5%; 
+}
+
 .header {
-  margin: 100px 50px 92px 50px;
+  padding: 92px 49px 96px 51px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 18px;
+  font-weight: 400;
 }
 
 .header__links-list {
@@ -28,39 +39,51 @@
 }
 
 .header__logo {
+  width: 100%;
+
+}
+
+.header__logo-image {
   display: block;
   width: 148px;
   height: 105px;
 }
 
 .header__address {
-  display: block;
-  font-size: 18px;
-  line-height: 24.3px;
+  flex: 0 0 auto;
+  width: 33.5%;
+  line-height: 135%;
+  font-style: normal;
+  text-underline-position: under;
+  padding-left: 15.5%;
+  /* Не наклонный шрифт должен быть */
 }
 
 /* cover */
 
 .cover {
+
+  /* padding: 50px 40px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
   color: #fff;
   background: url("../images/cover.jpg") center/cover;
 }
 
 .overlay {
-  padding: 50px 40px;
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: inherit;
+  height: 100%;
+  width: 100%;
+  /* padding: 165px 50px 50px; */
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.cover__title {
+/* .cover__title {
   display: flex;
+  font-weight: 700;
   flex-direction: column;
   gap: 20px;
-  padding: 165px 50px;
   font-size: 100px;
   letter-spacing: 30px;
   text-transform: uppercase;
@@ -74,31 +97,69 @@
   text-align: right;
 }
 
-.spacing-last-letter {
+.letter-spacing-letter {
+  letter-spacing: 60px;
+} */
+
+.cover__title {
+  padding: 165px 50px 0;
+  font-size: 100px;
+  font-weight: 700;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+/* Align */
+
+.letter-spacing_left {
+  text-align: left;
+}
+
+.letter-spacing_center {
+  width: 100%;
+  max-width: 1310px;
+  text-align: center;
+}
+
+.letter-spacing_right {
+  text-align: right;
+}
+
+/* Letter spacing */
+
+.letter-spacing-extended {
   letter-spacing: 60px;
 }
 
+/* No letter spacing */
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
 .cover__description {
+  padding: 125px 50px 50px 50px;
   display: flex;
-  flex-direction: row;
   justify-content: end;
   align-items: center;
-  gap: 78px;
-  margin-top: 147px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  font-weight: 400;
-  font-size: 22px;
+
+  /* margin-top: 135px;
+  display: flex;
+  justify-content: end;
+  align-items: center; */
 }
 .cover__description-text {
-  display: block;
-  line-height: 28px; /* 127.273% */
-  text-align: center;
+  font-size: 22px;
+  word-spacing: 17.5px;
   text-transform: uppercase;
-  word-spacing: 17px;
+  margin-right: 78px;
 }
 
 .bet-button {
+  text-transform: uppercase;
   display: block;
   width: 257px;
   height: 52px;
@@ -115,7 +176,7 @@
 }
 
 .lots__heading {
-  margin: 0 0 27px 90px;
+  padding: 0 50px 27px 90px;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -139,7 +200,7 @@
   min-height: 450px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; 
   flex-grow: 1;
 }
 
@@ -153,6 +214,13 @@
   color: #fff;
   height: 100%;
   width: 100%;
+
+}
+
+.card .overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card_type_film {
@@ -168,6 +236,7 @@
 }
 
 .card__title {
+  padding: 50px 40px 0;
   display: flex;
   font-size: 22px;
   font-style: normal;
@@ -178,6 +247,7 @@
 }
 
 .card__text {
+  padding: 0 40px 50px;
   display: flex;
   line-height: 120%;
   font-size: 20px;
@@ -201,8 +271,6 @@
 .about__column {
   display: grid;
   grid-template-columns: 430px 1fr;
-  margin-left: 50px;
-  margin-right: 50px;
   gap: 25px;
 }
 
@@ -239,7 +307,7 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  margin-top: 100px;
+  margin-top: 75px;
   font-style: normal;
   line-height: normal;
 }
@@ -247,11 +315,11 @@
 /* footer */
 
 .footer {
-  margin: 0 50px 50px;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 0 50px 90px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  gap: 356px;
 }
 
 .footer__link_active {
@@ -264,11 +332,15 @@
   font-size: 18px;
 }
 
+.footer__menu {
+  width: 100%;
+}
+
 .socials {
   display: flex;
   flex-direction: row;
   justify-self: end;
-  gap: 50px;
+  gap: 48px;
 }
 .footer__logo-image {
   display: block;
@@ -277,8 +349,9 @@
 }
 
 .footer__address {
-  font-size: 18px;
+  width: 28%;
   font-style: normal;
-  font-weight: 400;
+  text-underline-position: under;
+
   line-height: 24.3px;
 }
